deployments/minecraft-bedrock/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft-bedrock
  labels:
    app.kubernetes.io/managed-by: argocd
