deployments/minecraft-bedrock/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-pack-manager
spec:
  selector:
    app: minecraft-pack-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
